[gd_scene load_steps=2 format=3 uid="uid://dtwbwyjewnu1g"]

[ext_resource type="Script" path="res://Scenes/settings.gd" id="1_ysp3u"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ysp3u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Vol_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mute_Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Mute" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolution" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
item_count = 4
selected = 1
popup/item_0/text = "3840x2160"
popup/item_0/id = 0
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3

[node name="Exit_Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -45.0
offset_right = 96.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
text = "Return"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Mute" to="." method="_on_mute_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_exit_button_pressed"]
